--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <title>Vaction Locations</title>
@@ -14,11 +13,15 @@
       I've traveled all over and I have to say you too will enjoy these spots.
     </p>
   </div>
+  <div class="container">
+    <img src="img/notredam.jpg">
+    <p> Notre-Dame de Paris, often referred to simply as Notre-Dame, is a medieval Catholic cathedral on the Île de la Cité in the 4th arrondissement of Paris. The cathedral is consecrated to the Virgin Mary and considered to be one of the finest examples of French Gothic architecture.</p>
+    <p class="bg-success">Rated 4.7 on google!</p>
 
     <div class="panel panel-info">
         <div class="panel-heading">
 
-    <h2 class="panel-title">Git and GitHub</h2>
+    <h2 class="panel-title"></h2>
   </div>
   <div class="panel-body">
 
