Added More Places

--- a/index.html
+++ b/index.html
@@ -14,9 +14,24 @@
     </p>
   </div>
   <div class="container">
-    <img src="img/notredam.jpg">
+    <p class="bg-warning">Notre Dame</p>
+    <img src="img/notredam.jpg" style="width:1100px;height:500px;">
     <p> Notre-Dame de Paris, often referred to simply as Notre-Dame, is a medieval Catholic cathedral on the Île de la Cité in the 4th arrondissement of Paris. The cathedral is consecrated to the Virgin Mary and considered to be one of the finest examples of French Gothic architecture.</p>
     <p class="bg-success">Rated 4.7 on google!</p>
+  </div>
+  <div class="container">
+    <p class="bg-warning">Machu Picchu</p>
+    <img src="img/machu.jpg" style="width:1100px;height:500px;">
+    <p>Machu Picchu is an Incan citadel set high in the Andes Mountains in Peru, above the Urubamba River valley. Built in the 15th century and later abandoned, it’s renowned for its sophisticated dry-stone walls that fuse huge blocks without the use of mortar, intriguing buildings that play on astronomical alignments and panoramic views. Its exact former use remains a mystery.</p>
+    <p class="bg-success">Rated 4.8 on google!</p>
+  </div>
+
+    <div class="container">
+      <p class="bg-warning">The Leaning Tower of Pisa</p>
+      <img src="img/pisa.jpg" style="width:1100px;height:1100px;">
+      <p>The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of the Italian city of Pisa, known worldwide for its nearly four-degree lean, the result of an unstable foundation</p>
+      <p class="bg-success">Rated 4.6 on google!</p>
+</div>
 
     <div class="panel panel-info">
         <div class="panel-heading">
