--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Vaction Locations</title>
   </head>
   <body>
@@ -14,40 +15,53 @@
     </p>
   </div>
   <div class="container">
-    <p class="bg-warning">Notre Dame</p>
+    <h2 class="bg-warning">Notre Dame</h2>
     <img src="img/notredam.jpg" style="width:1100px;height:500px;">
     <p> Notre-Dame de Paris, often referred to simply as Notre-Dame, is a medieval Catholic cathedral on the Île de la Cité in the 4th arrondissement of Paris. The cathedral is consecrated to the Virgin Mary and considered to be one of the finest examples of French Gothic architecture.</p>
     <p class="bg-success">Rated 4.7 on google!</p>
   </div>
+    <div class="container">
+  <div class="row">
+    <h4>Vacation Package</h4>
+    <div class="col-xs-6">
+    <p>Luxury Packages starting at $3,549. Business Class Airfare, a 5 Star Hotel
+       Chauffer Transfers.<p>
+  </div>
+  <div class="col-xs-6">
+    <p>Premium Packages starting at $1,657, Premium Economy Airfare with a 4 Star Hotel,
+      Midsize Car Rental.</p>
+    </div>
+    <div class="col-xs-6">
+      <p>Economy Packages starting at $767, 3 Star Hotel, Economy Car Rental.</p>
+    </div>
+    </div>
+    </div>
+  </div>
   <div class="container">
-    <p class="bg-warning">Machu Picchu</p>
+    <h2 class="bg-warning">Machu Picchu</h2>
     <img src="img/machu.jpg" style="width:1100px;height:500px;">
     <p>Machu Picchu is an Incan citadel set high in the Andes Mountains in Peru, above the Urubamba River valley. Built in the 15th century and later abandoned, it’s renowned for its sophisticated dry-stone walls that fuse huge blocks without the use of mortar, intriguing buildings that play on astronomical alignments and panoramic views. Its exact former use remains a mystery.</p>
     <p class="bg-success">Rated 4.8 on google!</p>
   </div>
-
     <div class="container">
-      <p class="bg-warning">The Leaning Tower of Pisa</p>
+      <h2 class="bg-warning">The leaning tower of Pisa</h2>
       <img src="img/pisa.jpg" style="width:1100px;height:1100px;">
       <p>The Leaning Tower of Pisa or simply the Tower of Pisa is the campanile, or freestanding bell tower, of the cathedral of the Italian city of Pisa, known worldwide for its nearly four-degree lean, the result of an unstable foundation</p>
       <p class="bg-success">Rated 4.6 on google!</p>
 </div>
-
     <div class="panel panel-info">
         <div class="panel-heading">
-
+<p>No refunds</p>
     <h2 class="panel-title"></h2>
   </div>
   <div class="panel-body">
-
   </div>
 </div>
-
-
       <blockquote>
         <p>"It was the best time of my life!"</p>
         <footer>Vacationer</footer>
       </blockquote>
+
   </div>
   </body>
 </html>
